# esp32-rustls-issue

firmware/: .gitignore  Cargo.toml  rust-toolchain.toml  sdkconfig.defaults
firmware/.cargo/: config.toml
firmware/src/: main.rs
