[package]
name = "firmware"
version = "0.1.0"
authors = ["Matthew DeLio <mdelio@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "firmware"
harness = false # do not use the built-in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice, and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
anyhow = "1.0"
heapless = "0.9.1"
time = { version = "0.3.44", features = ["local-offset", "formatting", "macros"] }

esp-idf-svc = { version = "0.51.0" }
esp-idf-hal = { version = "0.45.2" }
esp-idf-sys = { version = "0.36.1" }

tokio = { version = "1.48.0", default-features = false, features = ["net", "rt", "io-std", "io-util", "macros", "sync", "rt-multi-thread", "mio", "time"] }
reqwest = { version = "0.12.24", default-features = false, features = ["stream", "json", "cookies"] }

#ring = { version = "0.17.14", default-features = false, features = ["std", "less-safe-getrandom-espidf"] }
#rustls = { version = "0.23.35", default-features = false, features = ["std", "tls12", "ring"] }

# --- Optional Embassy Integration ---
# esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }

# If you enable embassy-time-driver, you MUST also add one of:

# a) Standalone Embassy libs ( embassy-time, embassy-sync etc.) with a foreign async runtime:
# embassy-time = { version = "0.4.0", features = ["generic-queue-8"] } # NOTE: any generic-queue variant will work

# b) With embassy-executor:
# embassy-executor = { version = "0.7", features = ["executor-thread", "arch-std"] }

# NOTE: if you use embassy-time with embassy-executor you don't need the generic-queue-8 feature

# --- Temporary workaround for embassy-executor < 0.8 ---
# esp-idf-svc = { version = "0.51", features = ["embassy-time-driver", "embassy-sync"] }
# critical-section = { version = "1.1", features = ["std"], default-features = false }

[build-dependencies]
embuild = "0.33"
