[package]
name = "firmware"
version = "0.1.0"
authors = ["Matthew DeLio <mdelio@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "firmware"
harness = false # do not use the built-in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice, and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
anyhow = "1.0"
heapless = "0.9.1"
time = { version = "0.3.44", features = ["local-offset", "formatting", "macros"] }

esp-idf-svc = { version = "0.51.0" }
esp-idf-hal = { version = "0.45.2" }
esp-idf-sys = { version = "0.36.1" }

tokio = { version = "1.48.0", default-features = false, features = ["net", "rt", "io-std", "io-util", "macros", "sync", "rt-multi-thread", "mio", "time"] }
reqwest = { version = "0.12.24", default-features = false, features = ["stream", "json", "cookies", "rustls-tls"] }

ring = { version = "0.17.14", default-features = false, features = ["std", "less-safe-getrandom-espidf"] }
rustls = { version = "0.23.35", default-features = false, features = ["std", "tls12", "ring"] }

[build-dependencies]
embuild = "0.33"
